--- a/.github/workflows/NugetPublish.yml
+++ b/.github/workflows/NugetPublish.yml
@@ -22,6 +22,8 @@ jobs:
 
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1
+      with:
+        nuget-version: '6.x'
 
     - name: Restore dependencies
       run: nuget restore $SOLUTION
