--- a/.github/workflows/NugetPublish.yml
+++ b/.github/workflows/NugetPublish.yml
@@ -35,4 +35,4 @@ jobs:
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
 
     - name: Run tests
-      run: dotnet test /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
+      run: dotnet test src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
