--- a/.github/workflows/NugetPublish.yml
+++ b/.github/workflows/NugetPublish.yml
@@ -1,6 +1,9 @@
 name: CI
 
 on:
+  create:
+    branches: 
+      - release/**
   push:
     branches:
     - main
@@ -19,12 +22,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
+    
+    - name: Get Build Version
+      run: |
+        Import-Module .\build\GetBuildVersion.psm1
+        Write-Host $Env:GITHUB_REF
+        $version = GetBuildVersion -VersionString $Env:GITHUB_REF
+        echo "BUILD_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      shell: pwsh
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
-        
+
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1
 
@@ -32,7 +43,11 @@ jobs:
       run: nuget restore $SOLUTION
 
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
 
     - name: Run tests
-      run: dotnet test src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
+      run: dotnet test /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
+      
+    - name: Publish
+      if: startsWith(github.ref, 'refs/heads/release')
+      run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
