--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Nuget
 
 on:
   push:
@@ -14,18 +14,18 @@ jobs:
       CommitsSinceVersionSource: ${{ steps.gitversion.outputs.CommitsSinceVersionSource }} 
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
-        fetch-depth: 0 #fetch-depth is needed for GitVersion
+        fetch-depth: 0 
         
-    #Install and calculate the new version with GitVersion  
+    #calculate the new version with GitVersion  
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.7
       with:
         versionSpec: 5.x
     - name: Determine Version
       uses: gittools/actions/gitversion/execute@v0.9.7
-      id: gitversion # step id used as reference for output values
+      id: gitversion
     - name: Display GitVersion outputs
       run: |
         echo "Version: ${{ steps.gitversion.outputs.SemVer }}"
@@ -33,7 +33,7 @@ jobs:
     
     #Build/pack the project
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
     - name: Build and Pack NuGet package
@@ -47,7 +47,7 @@ jobs:
   release:
     runs-on: ubuntu-latest    
     needs: build
-    if: github.ref == 'refs/heads/main' # only run job if on the main branch   
+    if: github.ref == 'refs/heads/main'
     
     steps:  
     #Push NuGet package to GitHub packages
