--- a/src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj
+++ b/src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj
@@ -9,12 +9,11 @@
 	<Description>Chat client solution for ASP.NET server</Description>
 	<Copyright>Copyright © 2022 jihadkhawaja</Copyright>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	<RepositoryUrl>https://github.com/jihadkhawaja/MobileChat</RepositoryUrl>
+	<RepositoryUrl>https://github.com/jihadkhawaja/mobilechat.client</RepositoryUrl>
 	<PackageProjectUrl>https://github.com/jihadkhawaja/mobilechat.client</PackageProjectUrl>
 	<PackageIcon>favico.png</PackageIcon>
 	<PackageTags>asp.net, blazor, signalr, chat, client</PackageTags>
-	<GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
-	<PackageReleaseNotes>https://github.com/jihadkhawaja/MobileChat/releases</PackageReleaseNotes>
+	<PackageReleaseNotes>https://github.com/jihadkhawaja/mobilechat.client/releases</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
