--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -44,6 +44,9 @@ jobs:
         name: nugetPackage
         path: src/jihadkhawaja.mobilechat.client/bin/Release/ 
         
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1
+        
   release:
     runs-on: ubuntu-latest    
     needs: build
@@ -78,3 +81,8 @@ jobs:
         name: Release ${{ needs.build.outputs.Version }}
         artifacts: "nugetPackage/*"
         token: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Publish to Nuegt
+      if: startsWith(github.ref, 'refs/heads/release')
+      run: nuget push nugetPackage/* -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
+
