--- a/src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj
+++ b/src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj
@@ -5,7 +5,7 @@
     	<ImplicitUsings>enable</ImplicitUsings>
     	<Nullable>enable</Nullable>
 	<Version>0.0.11</Version>
-  	<PackageReadmeFile>../../README.md</PackageReadmeFile>
+  	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<Authors>jihadkhawaja</Authors>
 	<Description>Chat client solution for ASP.NET server</Description>
 	<Copyright>Copyright © 2022 jihadkhawaja</Copyright>
@@ -23,6 +23,7 @@
 
   <ItemGroup>
 	<None Include="..\..\favico.png" Pack="true" PackagePath="" />
+	<None Include="..\..\README.md" Pack="true" PackagePath=""/>
   </ItemGroup>
 
 </Project>
