--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+  workflow_dispatch:
 
 jobs:
   build:
@@ -35,7 +37,9 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 6.0.x
+         dotnet-version: |
+          6.0.x
+          7.0.x
     - name: Build and Pack NuGet package
       run: dotnet pack src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj -p:Version='${{ steps.gitversion.outputs.SemVer }}' -c Release
     - name: Upload NuGet package to GitHub
@@ -61,12 +65,15 @@ jobs:
     - name: Prep packages
       run: dotnet nuget add source --username jihadkhawaja --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/jihadkhawaja/index.json"
     - name: Push package to GitHub packages 
-      if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change  
+      # Only release if there has been a commit/version change  
+      if: needs.build.outputs.CommitsSinceVersionSource > 0
       run: dotnet nuget push nugetPackage/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }}  --source "github"
     
     #Create release
     - name: Create Release
-      if: 1 == 0 #needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change
+      # needs.build.outputs.CommitsSinceVersionSource > 0
+      # Only release if there has been a commit/version change
+      if: 1 == 0
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -74,7 +81,8 @@ jobs:
         tag_name: ${{ needs.build.outputs.Version }}
         release_name: Release ${{ needs.build.outputs.Version }}
     - name: Create Release
-      if: needs.build.outputs.CommitsSinceVersionSource > 0 #Only release if there has been a commit/version change
+      # Only release if there has been a commit/version change
+      if: needs.build.outputs.CommitsSinceVersionSource > 0
       uses: ncipollo/release-action@v1
       with:
         tag: ${{ needs.build.outputs.Version }}
@@ -82,6 +90,5 @@ jobs:
         artifacts: "nugetPackage/*"
         token: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Publish to Nuegt
-      run: nuget push nugetPackage/* -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
-
+    - name: Publish nuget package
+      run: dotnet nuget push nugetPackage/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
