--- a/src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj
+++ b/src/jihadkhawaja.mobilechat.client/jihadkhawaja.mobilechat.client.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>annotations</Nullable>
   	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<Authors>jihadkhawaja</Authors>
 	<Description>Chat client solution for ASP.NET server</Description>
@@ -16,8 +16,12 @@
 	<PackageReleaseNotes>https://github.com/jihadkhawaja/mobilechat.client/releases</PackageReleaseNotes>
   </PropertyGroup>
 
-  <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.8" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.11" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net7.0' ">
+	<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
