--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -14,7 +14,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest    
-
+    env:
+        VERSION: 1.0.0
+    outputs:
+        VERSION: ${{ steps.output-version.outputs.VERSION }}
     steps:
     - uses: actions/checkout@v3
       with:
@@ -67,8 +70,8 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
-        tag: ${VERSION}
-        name: Release ${VERSION}
+        tag: ${{ needs.build.outputs.VERSION }}
+        name: Release ${{ needs.build.outputs.VERSION }}
         artifacts: "nugetPackage/*"
         token: ${{ secrets.GITHUB_TOKEN }}
       
