--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -71,6 +71,10 @@ jobs:
     runs-on: ubuntu-latest 
     needs: build
     steps:
+      - name: Retrieve artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: nugetPackage
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
