--- a/.github/workflows/Nuget.yml
+++ b/.github/workflows/Nuget.yml
@@ -14,7 +14,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest    
-
+    env:
+        VERSION: 1.0.0
+    outputs:
+        VERSION: ${{ steps.output-version.outputs.VERSION }}
     steps:
     - uses: actions/checkout@v3
       with:
@@ -36,8 +39,7 @@ jobs:
       id: output-version
       run: |
         echo "VERSION=${{ env.VERSION }}" >> $GITHUB_OUTPUT
-        echo  ${{ needs.get-version.outputs.VERSION }}
-    
+        
     #Build/pack the project
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
@@ -63,14 +65,20 @@ jobs:
     - name: Push package to GitHub packages
       run: dotnet nuget push nugetPackage/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }}  --source "github"
       
-    #Create release
-    - name: Create Release
-      uses: ncipollo/release-action@v1
-      with:
-        tag: ${VERSION}
-        name: Release ${VERSION}
-        artifacts: "nugetPackage/*"
-        token: ${{ secrets.GITHUB_TOKEN }}
-      
     - name: Publish nuget package
       run: dotnet nuget push nugetPackage/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+  Release: 
+    runs-on: ubuntu-latest 
+    needs: build
+    steps:
+      - name: Download nuget package artifact
+        uses: actions/download-artifact@v1.0.0
+        with:
+          name: nugetPackage
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ needs.build.outputs.VERSION }}
+          name: Release ${{ needs.build.outputs.VERSION }}
+          artifacts: "nugetPackage/*.nupkg"
+          token: ${{ secrets.GITHUB_TOKEN }}
